[project]
name = "jb_async_utils"
version = "0.1.0"
authors = [
    { name="Li Peng-Hsuan", email="jacobvsdanniel@gmail.com" },
]
description = "Utilities for running asynchronous IO tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7.0",
    "openai>=1.65.2",
    "aiohttp>=3.8.6",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jacobvsdanniel/async_utils"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_utils"]
